# star-and-toot

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  star-and-toot.py
